Initial commit: flask app with mysql integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,40 +2,40 @@ version: "3.8"
 
 services:
   mysql:
-    user: "${UID}:${GID}" 
-    image: mysql:5.7
-    container_name: mysql
+    container_name: mysql-flask-app
+    image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: devops
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin
+      MYSQL_ROOT_PASSWORD: "root"
+      MYSQL_DATABASE: "ashwin"
+    ports:
+      - "3306:3306"
     volumes:
-      - ./mysql-data:/var/lib/mysql
-      - ./message.sql:/docker-entrypoint-initdb.d/message.sql  
+      - mysql-flask-app:/var/lib/mysql
     networks:
-      - twotier
+      - flask-backend-ntwk
+    restart: always
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 60s
+      start_period: 90s
 
-  flask-app:
-    image: trainwithshubham/two-tier-flask-app:latest
-    container_name: flask-app
+  flask:
+    image: ashwin369/flask-backend-app:latest
+    container_name: flask-backend-app
     ports:
       - "5000:5000"
     environment:
       MYSQL_HOST: mysql
       MYSQL_USER: root
       MYSQL_PASSWORD: root
-      MYSQL_DB: devops
-    depends_on:
-      - mysql
+      MYSQL_DB: ashwin
     networks:
-      - twotier
+      - flask-backend-ntwk
+    depends_on:
+      mysql:
+        condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
@@ -44,5 +44,8 @@ services:
       retries: 5
       start_period: 30s
 
+volumes:
+  mysql-flask-app:
+
 networks:
-  twotier:
+  flask-backend-ntwk:
